# rearranger

./: .pre-commit-config.yaml  .pytest.ini  .secrets.baseline  environment.yml  pyproject.toml
rearranger/: core.py
rearranger/resources/ensembles/: test.musicxml
