[tool.poetry]
name = "rearranger"
version = "0.1.0"
description = ""
authors = ["pat ike egb <patrick.egbuchulam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
music21 = "^9.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
detect-secrets = "^1.4.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
